--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
+  "devDependencies": {
+    "eslint-utils": "^1.4.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
