--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "eslint-utils": "^1.4.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
-  "devDependencies": {
-    "eslint-utils": "^1.4.1"
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
