--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,23 @@ servers:
   - docker
 
 before_install:
-  - docker build -t phunhakent/mutli-cont-client-test -f ./client/Dockerfile.dev .
+  - docker build -t phunhakent/mutli-cont-client-test -f ./client/Dockerfile.dev ./client
 
 scripts:
-  - docker run punhakent/mutli-cont-client-test npm run test -- --coverage
+  - docker run phunhakent/mutli-cont-client-test npm run test -- --coverage
 
 after_success:
   # build product version of all services
-  - docker build -t punhakent/mutli-cont-client -f ./client/Dockerfile.prod .
-  - docker build -t punhakent/mutli-cont-nginx -f ./nginx/Dockerfile.prod .
-  - docker build -t punhakent/mutli-cont-server -f ./server/Dockerfile.prod .
-  - docker build -t punhakent/mutli-cont-worker -f ./worker/Dockerfile.prod .
+  - docker build -t phunhakent/mutli-cont-client -f ./client/Dockerfile.prod ./client
+  - docker build -t phunhakent/mutli-cont-nginx -f ./nginx/Dockerfile.prod ./nginx
+  - docker build -t phunhakent/mutli-cont-server -f ./server/Dockerfile.prod ./server
+  - docker build -t phunhakent/mutli-cont-worker -f ./worker/Dockerfile.prod ./worker
 
   # log in to the docker CLI
   - docker login -u "$DOCKER_ID" -p "$DOCKER_PASSWORD"
 
   # take all images and push them to Docker Hub
-  - docker push punhakent/mutli-cont-client
-  - docker push punhakent/mutli-cont-nginx
-  - docker push punhakent/mutli-cont-server
-  - docker push punhakent/mutli-cont-worker
-
+  - docker push phunhakent/mutli-cont-client
+  - docker push phunhakent/mutli-cont-nginx
+  - docker push phunhakent/mutli-cont-server
+  - docker push phunhakent/mutli-cont-worker
