--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 before_install:
   - docker build -t phunhakent/mutli-cont-client-test -f ./client/Dockerfile.dev ./client
 
-scripts:
+script:
   - docker run phunhakent/mutli-cont-client-test npm run test -- --coverage
 
 after_success:
